🐛 Bug fixed on mobile and desktop where white lines would appear on borders due to CSS transforms

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,7 +61,6 @@
 @layer base {
   body {
     font-family: "Pretendard", sans-serif;
-    overflow-x: hidden;
     cursor: none;
     a {
       cursor: none;
